added faicon and ThreadConsole

--- a/server/htdocs/index.html
+++ b/server/htdocs/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prova</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 </head>
 <body>
     <h1>bel titolo</h1>
-    <img src="img/Gemitaiz.jpg" alt="">
+    <img src="img/gem.jpg" alt="">
 </body>
 </html>
